--- a/app.json
+++ b/app.json
@@ -6,9 +6,9 @@
   ],
   "window":{
     "backgroundTextStyle":"dark",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black",
+    "navigationBarBackgroundColor": "#000",
+    "navigationBarTitleText": "The New York Times",
+    "navigationBarTextStyle":"#fff",
     "enablePullDownRefresh": true
   }
 }
