--- a/app.json
+++ b/app.json
@@ -1,14 +1,12 @@
 {
   "pages":[
     "pages/index/index",
-    "pages/list/list",
     "pages/detail/detail"
   ],
   "window":{
     "backgroundTextStyle":"dark",
     "navigationBarBackgroundColor": "#000",
     "navigationBarTitleText": "The New York Times",
-    "navigationBarTextStyle":"#fff",
-    "enablePullDownRefresh": true
+    "navigationBarTextStyle":"#fff"
   }
 }
